--- a/lesson_02/index.html
+++ b/lesson_02/index.html
@@ -29,7 +29,7 @@
 <main>
   <div>
     <h2 id="section-1">Опис</h2>
-    <p title="Опис страви">Борщ — символ української кухні.<br> Цей наваристий <span>суп</span> із буряка, капусти та м'яса — смачна та поживна страва.</br></p>
+    <p title="Опис страви">Борщ — символ української кухні.<br> Цей наваристий суп із буряка, капусти та м'яса — смачна та поживна страва.</br></p>
     <img src="img/borsch.jpg" alt="Борщ">
     <h2 id="section-2">Інгредієнти</h2>
     <ul title="Список інгредиєнтів">
